[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Fonts/ModuleTitlesFont_2.tres" type="DynamicFont" id=1]
[ext_resource path="res://Source/Menus/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="VBoxContainer"]
margin_left = 827.0
margin_top = 455.0
margin_right = 1092.0
margin_bottom = 525.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
margin_left = 840.0
margin_top = 555.0
margin_right = 1079.0
margin_bottom = 625.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/NewButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
